# EduBot

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  update_admin_users.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: auth.py  config.py  graph.py  llm_provider.py  main.py  schemas.py  tools.py
backend/app/db/: database.py  models.py
backend/app/routers/: auth_router.py  chat_router.py  settings_router.py
backend/data/: academic_calendar.txt  university_info.txt
backend/data/Academic/: academic_calendar.txt
backend/data/Administrative/: university_info.txt
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json
frontend/app/: auth.module.css  globals.css  layout.tsx  page.tsx
frontend/app/chat/: chat.module.css  page.tsx
frontend/app/components/: CustomSelect.module.css  CustomSelect.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx  settings.module.css
frontend/app/settings/components/: ModelSection.tsx  UploadSection.tsx
frontend/lib/: api.ts  auth-context.tsx  types.ts
